--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,17 @@ name = "pypi"
 
 [scripts]
 main = "python main.py"
+jupyterlab = "jupyter lab"
+jupyter = "jupyter notebook"
 
 [packages]
+jupyterlab = "*"
+scikit-learn = "*"
+matplotlib = "*"
+pandas = "*"
+keras = "*"
+tensorflow = "*"
+requests = "*"
 
 [dev-packages]
 autopep8 = "==1.5.7"
